# live2d-sprite

./: CMakeLists.txt  Makefile  README.md
cubism/: .gitignore
src/: CMakeLists.txt  LAppDefine.cpp  LAppDefine.hpp  Live2DLipSync.hpp  Live2DManager.cpp  Live2DManager.hpp  Live2DModel.cpp  Live2DModel.hpp  Live2DSprite.cpp  Live2DSprite.hpp  Live2DUtils.cpp  Live2DUtils.hpp  live2DLipsync.hpp  live2DManager.cpp  live2DManager.hpp  live2DModel.cpp  live2DModel.hpp  live2DSprite.cpp  live2DSprite.hpp  live2DUtils.cpp  live2DUtils.hpp
test/: CMakeLists.txt  test.cpp
